# bazel-module-federation

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  .npmrc  .swcrc  BUILD.bazel  LICENSE  README.md  WORKSPACE  create_route.sh  docker-compose.yml  lint-staged.config.js  package.json
.github/workflows/: ci.yaml
bazel/docker/: BUILD.bazel  defaults.bzl  images.bzl
bazel/js/: BUILD.bazel  defaults.bzl  roads.bzl  webpack.host.config.js  webpack.road.config.js
bazel/js/internals/: BUILD.bazel  generate_route_manifest.bzl  host.bzl  middleware.bzl  module.bzl  roads.bzl  routes.bzl  server.bzl
bazel/js/internals/routes/: BUILD.bazel  generate-route-manifest.js
bazel/js/internals/server/: BUILD.bazel  getPageTemplate.ts
bazel/js/internals/webpack/: BUILD.bazel  webpack.common.config.js  webpack.host.config.js  webpack.module-federation.shared.js  webpack.road.config.js
docs/: design.md  shared-ruleset-design.md
examples/simple/: BUILD.bazel
examples/simple/client/: BUILD.bazel
examples/simple/client/host/: BUILD.bazel  FederatedRoute.tsx
examples/simple/client/host/capabilities/: preload.ts
examples/simple/client/routes/: BUILD.bazel  default.tsx  index.ts
examples/simple/client/routes/secondary/: BUILD.bazel
examples/simple/server/: BUILD.bazel  README.md  server.ts
examples/simple/utils/: index.ts
src/client/: BUILD.bazel  host.js  webpack.config.js
src/client/host/: BUILD.bazel  DynamicComponent.jsx  DynamicComponent.tsx  FederatedRoute.tsx  Route.jsx  Route.tsx  bootstrap.jsx  bootstrap.tsx  host.jsx
src/client/host/404/: 404.tsx  BUILD.bazel  package.json
src/client/host/capabilities/: getIdentifier.js  preload.js  preload.ts
src/client/routes/: BUILD.bazel  default.jsx  default.tsx  index.js  index.ts  secondary.jsx  webpack.road.config.js
src/client/routes/default/: BUILD.bazel
src/client/routes/secondary/: BUILD.bazel  dep.jsx  secondary.jsx  secondary.tsx
src/middleware/: BUILD.bazel  index.ts
src/routes/: index.js
src/server/: BUILD.bazel  README.md  getPageTemplate.js  getPageTemplate.ts  server.js  server.ts
src/utils/: BUILD.bazel  index.ts
src/utils/redux/: counterSlice.ts  index.ts  store.ts
