load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

exports_files([
    "package.json",
])

buildifier(
    name = "buildifier",
)

package_group(
    name = "server_group",
    packages = [
        "//src/client",
        "//src/client/routes",
        "//src/server",
        "//src/utils",
    ],
)
