load("@com_github_ash2k_bazel_tools//multirun:def.bzl", "command", "multirun")

package_group(
    name = "server_group",
    packages = [
        "//examples/simple",
        "//examples/simple/client",
        "//examples/simple/client/routes",
        "//examples/simple/server",
        "//examples/simple/utils",
    ],
)

# Defines dev-server watching for any route/host builds
command(
    name = "client_dev",
    arguments = [
        "./%s/client/client" % package_name(),
        "--port",
        "3000",
    ],
    command = "//examples/simple/client:dev",
    environment = {},
    raw_environment = {},
)

# Defines build and run of the server component
command(
    name = "server_dev",
    arguments = [
        "--port",
        "3000",
    ],
    command = "//examples/simple/server:dev",
    environment = {
        "CDN_HOST": "http://localhost:3000",
    },
    raw_environment = {},
)

# Instructs ibazel to run both client and server in the same script
multirun(
    name = "dev",
    commands = [
        ":client_dev",
        ":server_dev",
    ],
    jobs = 0,
)
