load("@com_github_ash2k_bazel_tools//multirun:def.bzl", "command", "multirun")
load("//bazel/js/internals:server.bzl", "server")

package_group(
    name = "server_group",
    packages = [
        "//examples/simple",
        "//examples/simple/client",
        "//examples/simple/client/routes",
        "//examples/simple/server",
        "//examples/simple/utils",
    ],
)

server(
    name = "server",
    route_manifest_module = "//examples/simple/client/routes",
)

# Defines dev-server watching for any route/host builds
command(
    name = "client_dev_cmd",
    arguments = [
        "./%s/client/client" % package_name(),
        "--port",
        "3000",
    ],
    command = "//examples/simple/client:dev",
    environment = {},
    raw_environment = {},
)

# Defines build and run of the server component
command(
    name = "server_dev_cmd",
    arguments = [
        "--port",
        "3000",
    ],
    command = ":server_dev",
    environment = {
        "CDN_HOST": "http://localhost:3000",
    },
    raw_environment = {},
)

# Instructs ibazel to run both client and server in the same script
multirun(
    name = "dev",
    commands = [
        ":client_dev_cmd",
        ":server_dev_cmd",
    ],
    jobs = 0,
)
