load("//bazel/js:defaults.bzl", "pkg_web")
load("@npm//http-server:index.bzl", "http_server")

pkg_web(
    name = "client",
    srcs = [
        "//src/client/host",
        "//src/client/routes",
    ],
    additional_root_paths = [
        "%s/routes/routes/" % package_name(),
        "%s/host/host" % package_name(),
    ],
    visibility = [
        "//:server_group",
    ],
)

http_server(
    name = "dev_cdn_server"
    data = [
        ":client"
    ]
    args = ["."]
)
