load("//bazel/js:defaults.bzl", "pkg_web")
load("@npm//http-server:index.bzl", "http_server")

pkg_web(
    name = "client",
    srcs = [
        "//src/client/host",
        "//src/client/routes:all_routes",
    ],
    additional_root_paths = [
        "%s/routes/all_routes/" % package_name(),
        "%s/host/host" % package_name(),
    ],
)

http_server(
    name = "dev",
    data = [
        ":client",
    ],
    visibility = [
        "//:server_group",
    ],
)
