load("//bazel/docker:defaults.bzl", "container_image", "container_layer")

# This layer links the server container to the routes being
# Changed so it can have the route manifest
container_layer(
    name = "route_manifest_layer",
    directory = "/home/node",
    files = [
        "//src/client/routes:route_manifest"
    ]
)

# This layer container the server files
container_layer(
    name = "server_source_layer",
    directory = "/home/node",
    files = [
        ":server.js",
        ":getPageTemplate.js"
    ]
)

# This builds the final image for use and sets the directory to /home/node
container_image(
    name = "server",
    base = "@node//image",
    workdir = "/home/node",
    layers = [":server_source_layer", ":route_manifest_layer"]
)
