load("//bazel/js:defaults.bzl", "pkg_web")
load("@npm//http-server:index.bzl", "http_server")

pkg_web(
    name = "client",
    srcs = [
        "//examples/simple/client/host",
        "//examples/simple/client/routes:all_routes",
    ],
    additional_root_paths = [
        "%s/routes/all_routes/" % package_name(),
        "%s/host/host" % package_name(),
    ],
)

http_server(
    name = "dev",
    data = [
        ":client",
    ],
    visibility = [
        "//examples/simple:server_group",
    ],
)
