load("@npm//webpack-cli:index.bzl", "webpack_cli")
load("@rules_spa//spa:defs.bzl", "build_host")

build_host(
    srcs = [
        "DynamicComponent.tsx",
        "FederatedRoute.tsx",
        "bootstrap.tsx",
        "capabilities/preload.ts",
        "host.tsx",
    ],
    data = [
        "//:package.json",
        "//src/utils",
        "@npm//:node_modules",
    ],
    entry = "host",
    federation_shared_config = "//bazel/js/internals/webpack:webpack.module-federation.shared.js",
    webpack = webpack_cli,
)
