load("@npm//webpack-cli:index.bzl", "webpack_cli")
load("@aspect_rules_swc//swc:swc.bzl", "swc")
load("@rules_spa//spa:defs.bzl", "build_host")

build_host(
    srcs = [
        "DynamicComponent.tsx",
        "FederatedRoute.tsx",
        "bootstrap.tsx",
        "capabilities/preload.ts",
        "host.tsx",
    ],
    data = [
        "//:package.json",
        "@npm//:node_modules",
        "@npm//@carto/utils",
        "@npm//@internal/404",
    ],
    entry = "host",
    federation_shared_config = "//bazel/js/internals/webpack:webpack.module-federation.shared.js",
    webpack = webpack_cli,
)

swc(
    name = "minify",
    srcs = ["host"],
    args = [
        "-C minify=true",
        "-C jsc.minify.compress=true",
        "-C jsc.minify.mangle=true",
    ],
    output_dir = True,
)
