load("//bazel/js:defaults.bzl", "build_module", "build_route", "pkg_web")
load("@rules_spa//spa:defs.bzl", "generate_route_manifest")

build_route(
    name = "default",
    data = ["default.tsx"],
    entry = "./$(execpath default.tsx)",
)

pkg_web(
    name = "all_routes",
    srcs = [
        ":default",
        "//src/client/routes/secondary",
    ],
    additional_root_paths = ["%s/secondary" % package_name()],
    visibility = ["//src/client:__pkg__"],
)

generate_route_manifest(
    name = "route_manifest",
    routes = "all_routes",
)

build_module(
    package_name = "@carto/routes",
    srcs = [
        "index.ts",
        ":route_manifest",
    ],
    visibility = ["//:server_group"],
    deps = [
        "@npm//@types/node",
    ],
)
