load("@npm//webpack-cli:index.bzl", "webpack_cli")
load("//bazel/js:defaults.bzl", "build_module", "pkg_web")
load("@rules_spa//spa:defs.bzl", "build_route", "generate_route_manifest")

build_route(
    name = "default",
    srcs = ["default.tsx"],
    data = [
        "//:package.json",
        "//src/utils",
        # "@npm//:node_modules",
        "@npm//react-redux",
        "@npm//react-router-dom",
        "@npm//react",
        "@npm//@reduxjs/toolkit",
    ],
    entry = "./$(execpath default.tsx)",
    shared = "//bazel/js/internals/webpack:webpack.module-federation.shared.js",
    webpack = webpack_cli,
)

pkg_web(
    name = "all_routes",
    srcs = [
        ":default",
        "//src/client/routes/secondary",
    ],
    additional_root_paths = ["%s/secondary" % package_name()],
    visibility = ["//src/client:__pkg__"],
)

generate_route_manifest(
    name = "route_manifest",
    routes = "all_routes",
)

build_module(
    package_name = "@carto/routes",
    srcs = [
        "index.ts",
        ":route_manifest",
    ],
    visibility = ["//:server_group"],
    deps = [
        "@npm//@types/node",
    ],
)
