load("//bazel/js:defaults.bzl", "build_host")

build_host(
    srcs = [
        "DynamicComponent.tsx",
        "FederatedRoute.tsx",
        "bootstrap.tsx",
        "capabilities/preload.ts",
        "host.tsx",
    ],
    data = [
        "//examples/simple/utils",
    ],
    entry = "host",
    visibility = ["//examples/simple:server_group"],
)
