load("//bazel/js:defaults.bzl", "build_module", "build_route", "generate_route_manifest", "pkg_web")

build_route(
    name = "default",
    data = ["default.tsx"],
    entry = "./$(execpath default.tsx)",
    visibility = ["//examples/simple:server_group"],
)

pkg_web(
    name = "all_routes",
    srcs = [
        ":default",
        "//examples/simple/client/routes/secondary",
    ],
    additional_root_paths = ["%s/secondary" % package_name()],
    visibility = ["//examples/simple/client:__pkg__"],
)

generate_route_manifest(
    name = "route_manifest",
    routes = "all_routes",
)

build_module(
    package_name = "@carto/routes",
    srcs = [
        "index.ts",
        ":route_manifest",
    ],
    visibility = ["//examples/simple:server_group"],
    deps = [
        "@npm//@types/node",
    ],
)
