load("@npm//webpack-cli:index.bzl", "webpack_cli")
load("@rules_spa//spa:defs.bzl", "build_route")

build_route(
    name = "secondary",
    srcs = [
        "dep.tsx",
        "secondary.tsx",
    ],
    data = [
        "//:package.json",
        "//src/utils",
        # "@npm//:node_modules",
        "@npm//react-redux",
        "@npm//react-router-dom",
        "@npm//react",
        "@npm//@reduxjs/toolkit",
    ],
    entry = "./$(execpath secondary.tsx)",
    shared = "//bazel/js/internals/webpack:webpack.module-federation.shared.js",
    webpack = webpack_cli,
)
