load("@npm//webpack-cli:index.bzl", "webpack_cli")
load("@rules_spa//spa:defs.bzl", "build_route")

build_route(
    name = "secondary",
    srcs = [
        "dep.tsx",
        "secondary.tsx",
    ],
    data = [
        "//:package.json",
        "@npm//:node_modules",
        "@npm//@carto/utils",
    ],
    entry = "./$(execpath secondary.tsx)",
    federation_shared_config = "//bazel/js/internals/webpack:webpack.module-federation.shared.js",
    webpack = webpack_cli,
)
